# ros2-beginner-smart-robot

./: README.md  obstacle_avoidance.py  package.xml  random_walker.py  setup.py  status_service.py
launch/: smart_robot.launch.py
